# VisRecon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  attention.py  checkpoints.py  config.py  decoder.py  geo_model.py  hair_seg.py  hrnet.py  pointnet.py  prt_render_gui.py  ray_utils.py  realworld.py  requirements.txt  rgbd_reader.py  rgbd_streamer.py  sh_selection.py  thuman.py  thuman_gen.py  thuman_renderer.py  train.py  training.py  turbo_colormap.py  unet3d.py  view_renderer.py
configs/: no_fuse.json  vis_fuse.json
implicit/: README.md  face_256.npy  grayish_env_shs.npy  implicit_prt_gen.py  implicit_render_prt.py
metrics/: README.md  ablation_gen_prt.py  comparison_preprocess.py  comparison_preprocess_parallel.py  metrics_collect.py  metrics_combine.py  metrics_cosine.py  metrics_error_map.py  metrics_geo.py  metrics_render_light_sphere_360.py  metrics_rendering.py  metrics_rendering_360.py  metrics_rendering_compute.py  metrics_rendering_compute_light.py  metrics_rendering_concat.py  metrics_rendering_light.py  metrics_vis.py
onnx_infer/: README.md  rvm_infer.py
teaser/: README.md  teaser_compute_sh.py  teaser_group_image.py  teaser_rendering.py  teaser_rendering_realworld.py  teaser_rendering_twindom_sequence.py  teaser_two_pass_realworld.py  teaser_view_renderer.py  teaser_view_renderer_compare.py  teaser_view_renderer_prt.py  (+3 more)
vis_fuse_utils/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
vis_fuse_utils/src/: vis_fuse_utils.cu
vis_fuse_utils/src-py/vis_fuse_utils/: __init__.py  utils.py
vis_fuse_utils/test/: test.py
(+23 files in other folders)
